[workspace]

members = [
    "major",           #主要运行空间 
    "created",         #created
    "closure",         #闭包
    "asyncs",          #异步
    "collections",     #集合训练
    "matching",        #匹配模式
    "strings",         #字符串
    "databases",       #数据库
    "meshwork",        # Tcp链接
    "thirdparty",      #第三方库的使用
    "thread",
    "tcp-client",
    "tcp-srvc",
    "rys_macro_rules",

]
